external-crates/move/crates/move-compiler/tests/move_check/parser/positional_struct_fields_keyword_field.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_fields_keyword_field.move:4:5
  │
4 │     public struct Foo(fun)
  │     ^^^^^^ Struct visibility modifiers are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_fields_keyword_field.move:4:22
  │
4 │     public struct Foo(fun)
  │                      ^ Positional fields are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/positional_struct_fields_keyword_field.move:4:23
  │
4 │     public struct Foo(fun)
  │                       ^ Expected a type

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/positional_struct_fields_keyword_field.move:4:26
  │
4 │     public struct Foo(fun)
  │                          ^
  │                          │
  │                          Unexpected ')'
  │                          Expected an identifier

