external-crates/move/crates/move-compiler/tests/move_check/parser/positional_struct_fields_keyword_field.move
address 0x42 {
module M {
    // keyword instead of a type
    public struct Foo(fun)
}
}
